# Playdate-3D-Renderer

./: CMakeLists.txt  README.md
Source/include/: display.h  global.h  logging.h  memory.h  mesh.h  patterns.h  stb_ds.h  triangle.h  utils.h  vector.h
Source/src/: display.c  main.c  mesh.c
Source/tests/: CMakeLists.txt
docs/: 3D-Software-Renderer-Project-Plan.md
